--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="four wide column">
 
           <!-- CODE FOR SEARCH FORM -->
-          <div class="ui icon input">
+          <div class="ui icon input" id="filtered">
             <input id="filter-input" type="text" name="filter" value="" placeholder="Search for gifts...">
             <i class="search icon"></i>
           </div>
@@ -54,7 +54,6 @@
 
           <!-- CODE FOR LIST OF GIFTS -->
           <ul class="gift-list">
-            <li>No gifts yet :(</li>
           </ul>
           <!-- ENDCODE FOR LIST OF GIFTS -->
 
