--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="ui raised very padded text container segment">
 
           <!-- CODE FOR LIST OF GIFTS -->
-          <ul class="gift-list">
+          <ul id="gift-list">
           </ul>
           <!-- ENDCODE FOR LIST OF GIFTS -->
 
